fixed image size on mobile

--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -2,6 +2,7 @@
 
 .App {
   text-align: center;
+  overflow-y: hidden;
   background: linear-gradient(
     -45deg,
     #123348,
